# rsyncdirector

./: .gitignore  .safety-project.ini  MANIFEST.in  README.md  pyproject.toml  pytest.ini  requirements.in  requirements.txt  requirements_dev.txt  requirements_test.in  requirements_test.txt  run-tests.sh
rsyncdirector/: main.py
rsyncdirector/integration_tests/: int_test_utils.py  it_base.py  metrics_scraper.py  test_metrics_scraper.py  test_pidfile.py  test_rsyncdirector.py
rsyncdirector/integration_tests/docker/: Dockerfile
rsyncdirector/lib/: command.py  config.py  enums.py  envvars.py  logging.py  logstreamer.py  metrics.py  pidfile.py  rsync.py  rsyncdirector.py  utils.py
rsyncdirector/resources/: rsyncdirector.yaml
rsyncdirector/resources/drawio/: .$backupmanager-process-flow.drawio.dtmp  backupmanager-overview.drawio  backupmanager-process-flow.drawio
rsyncdirector/tests/: test_config.py  test_utils.py
